AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=main
main_SOURCES=main.c common.c policy_lang.c policy.c vector.c universe/core.c decentral/dcpabe.c revocation/revocation.c drevocation/drevocation.c dacmacs/dacmacs.c
INCLUDES=-I../include -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/pbc -I/usr/local/include/pbc
LIBS=-lglib-2.0 -lpbc -lgmp -lcrypto -lm
